--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -15,7 +15,7 @@
   </div>
   
   <p class="author__bio">I am an Earth scientist working on problems related to mercury cycling in the environment. </p>
-  <p class="author__bio">I work in the <a href="https://bgc.seas.harvard.edu/">Biogeochemistry of Global Contaminants Group</a> at <a href="http://harvard.edu">Harvard University</a> where I am a PhD candidate under the supervision of <a href="https://bgc.seas.harvard.edu/elsie-sunderland.html">Dr. Elsie Sunderland</a>.</p>
+  <p class="author__bio">I work in the <a href="https://bgc.seas.harvard.edu/">Biogeochemistry of Global Contaminants Group</a> at <a href="http://harvard.edu">Harvard University</a>.</p>
 
 
   <div class="author__content">
